[gd_scene load_steps=5 format=2]

[ext_resource path="res://Nodes/InteractablesChar.gd" type="Script" id=1]
[ext_resource path="res://Nodes/DialogBubble.tscn" type="PackedScene" id=2]
[ext_resource path="res://Sprites/Oldman.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 30, 20 )

[node name="InteractablesChar" type="Area2D"]
script = ExtResource( 1 )
CharSprite = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 3 )
centered = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 3.67892, 3.67892 )
shape = SubResource( 1 )

[node name="DialogBubble" parent="." instance=ExtResource( 2 )]
margin_left = -25.0
margin_top = -15.0
margin_right = 35.0
margin_bottom = -3.0
[connection signal="body_entered" from="." to="." method="_on_InteractablesChar_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_InteractablesChar_body_exited"]
[connection signal="init_dialog" from="." to="DialogBubble" method="_on_InteractablesChar_init_dialog"]
